--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Costoro Timewatch</title>
 
-    <!-- Font -->
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
 
     <!-- Theme -->
     <link rel="stylesheet" href="%PUBLIC_URL%/theme.css" />
@@ -17,9 +18,7 @@
         font-family: Heebo, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
                      "Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
       }
-
       /* --- תיקון שורת Totals בטבלאות --- */
-      /* נותן לשורת ה-tfoot אותם מרווחים/גבול/רקע כמו גוף הטבלה כדי שלא "תברח" בקצה */
       table.table tfoot td {
         padding: 12px 14px;
         border-top: 1px solid var(--border);
