--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,39 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Costoro Timewatch</title>
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
-
-    <!-- Theme -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/theme.css" />
-
-    <style>
-      body {
-        font-family: Heebo, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-                     "Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-      }
-      /* --- תיקון שורת Totals בטבלאות --- */
-      table.table tfoot td {
-        padding: 12px 14px;
-        border-top: 1px solid var(--border);
-        background: #fbfdff;
-        font-weight: 700;
-        vertical-align: middle;
-      }
-      /* מצב כהה */
-      body.dark table.table tfoot td {
-        border-top-color: #1f2937;
-        background: #141b2e;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stake Bros</title>
   </head>
-  <body class="min-h-screen bg-gradient-to-b from-[var(--bg-from)] to-[var(--bg-to)] text-[var(--text)]">
+  <body class="bg-black text-white">
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
